Horizontal scrollbars, prevent wrapping, cleanup
No wrapping is a pain. It looks weird, but it's the only way:
CSS has an exception for textarea that makes write-space: pre or nowrap not work.
Using a deprecated HTML attribute is the only way, but React does not accept that,
 so bypassing React is neccesary.

--- a/examples/public/stylesheets/_base.less
+++ b/examples/public/stylesheets/_base.less
@@ -100,4 +100,33 @@
       }
     }
   }
+
+  .standard-scrollbars() {
+    @size: 6px;
+    @base-color: @color-background-darker;
+
+    ::-webkit-scrollbar {
+      width: @size;
+      height: @size;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: @base-color;
+    }
+
+    @thumb-color: darken(@base-color, 10%);
+
+    ::-webkit-scrollbar-thumb {
+      background: @thumb-color;
+    }
+
+    ::-webkit-scrollbar-thumb:window-inactive {
+      background: lighten(@thumb-color, 5%);
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: darken(@thumb-color, 5%);
+    }
+
+  }
 }
